<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ateam_kenobi</name>
  <version>0.0.0</version>
  <description>Obi Wan Kenobi, you're our only hope.</description>
  <maintainer email="matthew.barulic@gmail.com">matt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ateam_msgs</depend>
  <depend>ateam_radio_msgs</depend>
  <depend>ateam_common</depend>
  <depend>ateam_game_state</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ateam_geometry</depend>
  <depend>control_toolbox</depend>
  <depend>ompl</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>angles</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
