<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ateam_ui</name>
  <version>0.0.0</version>
  <description>UI package for A-Team</description>
  <maintainer email="mwoodward@gatech.edu">Matthew Woodward</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rosbridge_server</depend>
  <depend>ssl_league_msgs</depend>
  <depend>ateam_msgs</depend>
  <depend>npm</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
