<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ateam_vision_filter</name>
  <version>0.0.0</version>
  <description>Filters SSL vision messages into a single best estimate.</description>
  <maintainer email="fcdneiger@gmail.com">Joseph Neiger</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>ateam_common</depend>
  <depend>ateam_msgs</depend>
  <depend>ssl_league_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
